2012-01-16  Mark Rowe  <mrowe@apple.com>

        Merge r103869.

    2011-12-31  Dan Bernstein  <mitz@apple.com>

        Start trying to fix the Windows build after r103858.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::drawPDFPage):

2012-01-16  Mark Rowe  <mrowe@apple.com>

        Merge r103858.

    2011-12-31  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/8750356> REGRESSION (WebKit2): Printing a subframe containing a PDF prints the on-screen view instead of the entire PDF document
        <http://webkit.org/b/75232>

        Reviewed by Alexey Proskuryakov.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageDrawPagesToPDF): Added WKPrintInfo parameter, which is passed through as a PrintInfo
        to the WebPageProxy.
        * UIProcess/API/C/WKPagePrivate.h:
        * UIProcess/API/mac/WKPrintingView.mm:
        (-[WKPrintingView _preparePDFDataForPrintingOnSecondaryThread]): Changed to pass the PrintInfo
        down to WebPageProxy::drawPagesToPDF.
        (-[WKPrintingView _drawPreview:]): Changed to pass the PrintInfo down to
        WebPageProxy::drawRectToPDF.
        * UIProcess/API/mac/WKView.mm:
        (-[WKView canChangeFrameLayout:]): Changed to use WebFrameProxy::isDisplayingPDFDocument, which
        works for subframes as well.
        (-[WKView printOperationWithPrintInfo:forFrame:]): Added a FIXME.
        * UIProcess/WebFrameProxy.cpp:
        (WebKit::WebFrameProxy::isDisplayingPDFDocument): Added.
        * UIProcess/WebFrameProxy.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::drawRectToPDF): Added a PrintInfo parameter, which is passed through to
        the Web process.
        (WebKit::WebPageProxy::drawPagesToPDF): Ditto.
        * UIProcess/WebPageProxy.h:
        * WebProcess/Plugins/PDF/BuiltInPDFView.h:
        Added an override of pdfDocumentForPrinting() which returns the PDFDocument.
        * WebProcess/Plugins/Plugin.h: